<resources>
    <string name="app_name">ABZ</string>


    <!-- Заголовок №1 -->

    <string name="MaterialsOfHotBunker">Материалы горячего бункера</string>
    <string name="SaveButton">SAVE AS</string>
    <string name="LoadButton">LOAD</string>
    <string name="LoadData">Загрузка данных</string>
    <string name="SaveData">Сохранение данных</string>
    <string name="NameOfProject">Проект:  </string>




    <string name="PodborSostava">Подбор состава</string>
    <string name="TipSmesi">Тип смеси</string>
    <string name="WyborSmesi">Выбор типа смеси</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="TrebovaniaGOST">Требования ГОСТ</string>
    <string name="Trebovania">Требования</string>
    <string name="GOST">ГОСТ</string>
    <string name="Mix">MIX</string>
    <string name="Target">ЦЕЛЬ</string>
    <string name="Sita">Сита, мм</string>
    <string name="Auto">АВТО</string>
    <string name="SummaCHOG">      Сумма частных остатков, г:</string>
    <string name="SummaCHOG1">Сумма ЧО:</string>
    <string name="Gramm">г</string>


    <!-- Строковые ресурсы таблиц зернового состава -->

    <string name="H1">№1</string>
    <string name="H2">№2</string>
    <string name="H3">№3</string>
    <string name="H4">№4</string>
    <string name="H50">№5</string>
    <string name="H6">№6</string>
    <string name="H7">№7</string>
    <string name="H8">№8</string>


    <string name="H40">40</string>
    <string name="H20">20</string>
    <string name="H15">15</string>
    <string name="H10">10</string>
    <string name="H5">5</string>
    <string name="H2_5">2,5</string>
    <string name="H1_25">1,25</string>
    <string name="H0_63">0,63</string>
    <string name="H0_315">0,315</string>
    <string name="H0_16">0,16</string>
    <string name="H0_071">0,071</string>
    <string name="DNO">DNO</string>

    <string name="CHOG">ЧО, г</string>
    <string name="CHOP">ЧО, %</string>
    <string name="PO">ПО, %</string>
    <string name="PP">ПП, %</string>

    <string name="Otsek1">Отсек №1</string>
    <string name="Otsek2">Отсек №2</string>
    <string name="Otsek3">Отсек №3</string>
    <string name="Otsek4">Отсек №4</string>
    <string name="Otsek5">Отсек №5</string>
    <string name="Otsek6">Отсек №6</string>
    <string name="MP">МП</string>
    <string name="SZ">СЗ</string>
    <string name="OT">От</string>
    <string name="DO">До</string>


    <string name="Otsek1N">Фракция 20-40</string>
    <string name="Otsek2N">Фракция 15-20</string>
    <string name="Otsek3N">Фракция 10-15</string>
    <string name="Otsek4N">Фракция 5-10</string>
    <string name="Otsek5N">Фракция 2,5-5</string>
    <string name="Otsek6N">Фракция 0-2,5</string>
    <string name="OtsekMP">Мин. порошок</string>
    <string name="OtsekSZ">Пыль</string>

    <string name="GoToWorkCompose">ПЕРЕЙТИ К РАБОЧЕМУ РЕЦЕПТУ</string>
    <string name="autoPodbor">Автоподбор</string>



    <!-- Строковые ресурсы Keyboard Activity -->

    <string name="KeyBoardEndEdit">End</string>
    <string name="KeyBoardBackSpace">BackSpace</string>
    <string name="KeyBoardClear">Clear</string>
    <string name="ArLeft">\uf177</string>
    <string name="ArRight">\uf178</string>


    <!-- Строковые ресурсы WorkCompose Activity -->

    <string name="MassaZamesa">Масса замеса, кг</string>
    <string name="BitumUp100">Битум, % сверх 100%</string>
    <string name="BitumIn100">Битум, % в 100%</string>
    <string name="SD">Стаб. добавка, % от каменных материалов</string>
    <string name="DD">Дополн. добавка, % от каменных материалов</string>
    <string name="AD">Адгезионная добавка, % от массы битума</string>

    <string name="Component">Компонент</string>
    <string name="Procent">%</string>
    <string name="Kilogramm">кг</string>
    <string name="WorkCompose">Рабочий рецепт</string>
    <string name="Bitum">Битум</string>

    <string name="SD1">Стаб. добавка</string>
    <string name="DD1">Дополн. добавка</string>
    <string name="AD1">Адгез. добавка</string>
    <string name="BackToPodbor">ПЕРЕЙТИ К ПОДБОРУ СОСТАВА</string>
    <string name="Primechanie">Примечание: отметь добавку для включения её в массу замеса</string>

    <!-- Строковые ресурсы Mix Chooser Activity -->

    <string name="MixChooserHead">Типы асфальтобетонных смесей</string>
    <string name="MixChooserHeadNiz">Для нижних слоев по ГОСТ 9128-2009</string>
    <string name="MixChooserHeadVerch">Для верхних слоев по ГОСТ 9128-2009</string>


    <string name="MixChooserHeaderMarshallForVerh">АБС для верхнего слоя покрытия ГОСТ Р 58406.2 (Маршалл)</string>
    <string name="MixChooserHeaderMarshallForNiz">АБС для нижнего слоя покрытия ГОСТ Р 58406.2 (Маршалл)</string>
    <string name="MixChooserHeaderMarshallForOsnovanie">АБС для слоя основания по ГОСТ Р 58406.2 (Маршалл)</string>

    <string name="MixChooserHeaderMarshallForSHMA">Щебеночно-мастичные асфальтобетонные смеси по ГОСТ Р 58406.1 (Маршалл)</string>

    <string name="MixChooserHeaderSuperpaveForVerh">АБС для верхнего слоя покрытия ГОСТ Р 58401.1 (Superpave)</string>
    <string name="MixChooserHeaderSuperpaveForNiz">АБС для нижнего слоя покрытия ГОСТ Р 58401.1 (Superpave)</string>
    <string name="MixChooserHeaderSuperpaveForOsnovanie">АБС для слоя основания ГОСТ Р 58401.1 (Superpave)</string>
    <string name="MixChooserHeaderSuperpaveForTrotuar">АБС для тротуара ГОСТ Р 58401.1 (Superpave)</string>

    <string name="MixChooserHeaderSuperpaveForSMA">Щебеночно-мастичные смеси по ГОСТ Р 58401.2 (Superpave)</string>

    <string name="MixChooserHeadNS">Непрерывные зерновые составы</string>
    <string name="MixChooserHeadPS">Прерывистые зерновые составы</string>

    <string name="MixChooserHead2">Щебеночно-мастичные по ГОСТ 31015-2002</string>
    <string name="MixChooserHead3">ПНСТ 114-2016</string>
    <string name="MixChooserHead4">ГОСТ 58401.1-2019, ГОСТ 58401.2-2019</string>

    <string name="TipA">Тип А</string>
    <string name="TipB">Тип Б</string>
    <string name="TipV">Тип В</string>
    <string name="TipG">Тип Г</string>
    <string name="TipD">Тип Д</string>
    <string name="Porist">Пористая</string>
    <string name="VPoristSHEB">Высокопористая щебеночная</string>
    <string name="VPoristPESOK">Высокопористая песчаная</string>

    <string name="SMA10">ЩМА-10</string>
    <string name="SMA15">ЩМА-15</string>
    <string name="SMA20">ЩМА-20</string>

    <string name="SP9">SP-9,5</string>
    <string name="SP12">SP-12,5</string>
    <string name="SP19">SP-19</string>

    <string name="SP8">SP-8</string>
    <string name="SP11">SP-11</string>
    <string name="SP16">SP-16</string>

    <string name="SMA8">SMA-8</string>
    <string name="SMA11">SMA-11</string>
    <string name="SMA16">SMA-16</string>

    <!-- Строковые ресурсы ProjectChooser Activity -->


    <string name="Correct">\uf040</string>



</resources>
