<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/HEADERPROJECT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:text="@string/NameOfProject" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/SaveButton"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/FirstMaterialTable"
                        android:text="@string/SaveButton"

                        >

                    </Button>

                    <Button
                        android:id="@+id/LoadButton"
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/FirstMaterialTable"

                        android:text="@string/LoadButton">

                    </Button>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/HEADER"
                    style="@style/HeadOfForms"
                    android:text="@string/MaterialsOfHotBunker" />
                <!-- Корневой контейнер таблицы зернового состава материала из отсека №1-->


                <LinearLayout
                    android:id="@+id/rootLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:id="@+id/rootLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:id="@+id/rootLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:id="@+id/rootLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:id="@+id/rootLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:id="@+id/rootLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"></LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/rootLayoutMP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"></LinearLayout>

                    <LinearLayout
                        android:id="@+id/rootLayoutSZ"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"></LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/HEADER_1"
                style="@style/HeadOfForms"
                android:text="@string/PodborSostava" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/rootDesignLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/autoPodborButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@color/FirstMaterialTableDark"
                        android:text="@string/autoPodbor">
                    </Button>

                    <TextView
                        android:id="@+id/summaPercentage"
                        style="@style/HeadFieldOfFormPodbor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@color/FourthMaterialTableDark"
                        android:text="0.0" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_margin="3dp"
                android:background="@color/FourthMaterialTable"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/HeadFieldOfFormPodbor"
                        android:background="@color/FirstMaterialTableDark"
                        android:layout_weight="1"
                        android:text="@string/TipSmesi" />

                    <Button
                        android:id="@+id/mixChooserButton"
                        style="@style/ButtonOfChoosingMix"
                        android:background="@color/FirstMaterialTableDark"
                        android:layout_weight="2"
                        android:text="@string/WyborSmesi" />

                    <TextView
                        style="@style/HeadFieldOfFormPodborDouble"
                        android:background="@color/FirstMaterialTableDark"
                        android:layout_weight="2"
                        android:text="@string/TrebovaniaGOST" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/HeadFieldOfFormPodbor"
                        android:layout_weight="1"
                        android:background="@color/FirstMaterialTableDark"
                        android:text="@string/Sita" />

                    <TextView
                        style="@style/HeadFieldOfFormPodbor"
                        android:layout_weight="1"
                        android:background="@color/ResultTableDark"
                        android:text="@string/Mix" />

                    <TextView
                        style="@style/HeadFieldOfFormPodbor"
                        android:layout_weight="1"
                        android:background="@color/FourthMaterialTableDark"
                        android:text="@string/Target" />

                    <TextView
                        style="@style/HeadFieldOfFormPodbor"
                        android:layout_weight="1"
                        android:background="@color/FirstMaterialTableDark"
                        android:text="@string/OT" />

                    <TextView
                        style="@style/HeadFieldOfFormPodbor"
                        android:layout_weight="1"
                        android:background="@color/FirstMaterialTableDark"
                        android:text="@string/DO" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/resultMixRootContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical"></LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/GoToWorkCompose"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="@color/FirstMaterialTableDark"
                android:text="@string/GoToWorkCompose">

            </Button>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>