<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UniversalKeyboard">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/KeyBoardValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="1000"
                    android:textColor="@color/Black"
                    android:textSize="50sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/KeyBoardCalculate"

                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/Black"
                    android:text="="
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/KeyBoardTotalValue"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"

                    android:layout_weight="6"

                    android:gravity="center"
                    android:text="1000"
                    android:textColor="@color/Black"
                    android:textSize="50sp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/KeyBoard1"
                    style="@style/KeyBoardButton"
                    android:text="1" />

                <Button
                    android:id="@+id/KeyBoard2"
                    style="@style/KeyBoardButton"
                    android:text="2" />

                <Button
                    android:id="@+id/KeyBoard3"
                    style="@style/KeyBoardButton"
                    android:text="3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/KeyBoard4"
                    style="@style/KeyBoardButton"
                    android:text="4" />

                <Button
                    android:id="@+id/KeyBoard5"
                    style="@style/KeyBoardButton"
                    android:text="5" />

                <Button
                    android:id="@+id/KeyBoard6"
                    style="@style/KeyBoardButton"
                    android:text="6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/KeyBoard7"
                    style="@style/KeyBoardButton"
                    android:text="7" />

                <Button
                    android:id="@+id/KeyBoard8"
                    style="@style/KeyBoardButton"
                    android:text="8" />

                <Button
                    android:id="@+id/KeyBoard9"
                    style="@style/KeyBoardButton"
                    android:text="9" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <Button
                    android:id="@+id/KeyBoard0"
                    style="@style/KeyBoardButton"
                    android:text="0" />

                <Button
                    android:id="@+id/KeyBoardDot"
                    style="@style/KeyBoardButton"
                    android:text="." />

                <Button
                    android:id="@+id/KeyBoardPlus"
                    style="@style/KeyBoardButton"
                    android:text="+" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/KeyBoardBackSpace"
                    style="@style/KeyBoardButton"
                    android:layout_marginBottom="6dp"
                    android:text="@string/KeyBoardBackSpace"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/KeyBoardClear"
                    style="@style/KeyBoardButton"
                    android:layout_marginBottom="3dp"
                    android:text="@string/KeyBoardClear"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/KeyBoardEndEdit"
                style="@style/KeyBoardButton"
                android:layout_marginBottom="3dp"
                android:text="@string/KeyBoardEndEdit"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>